recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: reassignment to val
	steps = 0
              ^