recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {	
	steps = 0

	while(length!=75){
		var incre = increment
		var x=steps+incre
		avance(x)
		gauche(angle)
		var taille = length+incre
		spiral(x, 90, taille, 5)
	}
	
}

